--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -2,12 +2,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Ruby on Rails Torture | <%= @title %></title>
-<%= csrf_meta_tag %>
+<title>Ruby on Rails Tortur About Page</title>
 </head>
 
 <body>
-	<%= yield %>
-	
 </body>
 </html>
