Layout, Links, Routes

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,7 @@
-<h1>Pages#contact</h1>
-<p>Find me in app/views/pages/contact.html.erb</p>
+<h1> This is the Contact Page </h1>
+
+<p>
+ Contact me here.... <br><br> 
+ Studying Rails with Ruby 1.9.2
+</p>
+
