--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,33 +5,19 @@
 <title><%= title %></title>
 
 	<%= csrf_meta_tag %>
-	<!--[if lt IE 9]>
-	 <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-	<![endif]-->
-	<%= stylesheet_link_tag 'blueprint/screen', :media => 'screen' %>
-	<%= stylesheet_link_tag 'blueprint/print', :media => 'print' %>
-	<!--[if lt IE 8]>
-	 <%= stylesheet_link_tag 'blueprint/ie' %>
-	<![endif]-->
-	<%= stylesheet_link_tag 'custom', :media => 'screen' %>
 	
+	<!-- Styling Layout //-->
+	 <%= render "layouts/stylesheets" %>
+	<!-- Styling Layout //-->
 </head>
 
 <body>
 	<div class="container">
-	   <header>
-		<%= image_tag("logo.png",  :alt=>"Sample App", :class=>"round") %>
-		<nav class="round">
-			<ul>
-			  <li><%=link_to "Home", '#' %></li>
-			  <li><%=link_to "Help", '#' %></li>
-			  <li><%=link_to "Sign In", '#' %></li>
-			</ul>
-		</nav>
-	   </header>
+	  <%= render "layouts/header" %>
 	   <section class="round">
 		<%= yield %>
 	   </section>
+	   <%= render "layouts/footer" %>
 	</div>
 	
 </body>
