--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,3 +5,7 @@
 <p>
  More data here please check the design	
 </p>
+
+<!-- Sign up start //-->
+  <%= link_to "Sign Up Now!", "#", :class => "signup_button round" %>
+<!-- Sign up end //-->
