--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,5 +7,5 @@
 </p>
 
 <!-- Sign up start //-->
-  <%= link_to "Sign Up Now!", "#", :class => "signup_button round" %>
+  <%= link_to "Sign Up Now!", signup_path, :class => "signup_button round" %>
 <!-- Sign up end //-->
